# opencode-free-proxy

./: .gitignore  FEATURES.md  README.md  README.zh.md  nm_old  package.json  server.mjs  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/proxy/: anthropic.rs  auth.rs  log.rs  mod.rs  model_pool.rs  server.rs  zen.rs
src/components/: AddProviderDialog.tsx  ApiKeys.tsx  Header.tsx  ModelPool.tsx  Settings.tsx  Toast.tsx
src/hooks/: useTauri.ts
src/i18n/: context.tsx  theme.tsx  translations.ts
